--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <h1>トップページ</h1>
 <% if user_signed_in?%>
-  ログインしています
+  <%= "#{current_user.name}さんは、ログインしています"%>
   <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "新規登録", new_user_registration_path %>
