--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -76,7 +76,7 @@ form input[type="submit"] {
 
 form input[type="submit"]:hover {
   color:white;
-  background-color: rgba(255, 192, 203);
+  background-color: rgb(255, 192, 203);
 }
 
 footer {
