投稿ページ実装

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,3 +6,4 @@
   <%= link_to "新規登録", new_user_registration_path %>
   <%= link_to "ログイン", new_user_session_path %>
 <% end %>
+  <%= link_to "投稿画面へ遷移", new_tweet_path %>
