--- a/app/assets/stylesheets/user/post.css
+++ b/app/assets/stylesheets/user/post.css
@@ -1,3 +1,4 @@
+/* ここからヘッダーの記述 */
 .header {
   width: 100%;
   height: 80px;
@@ -19,12 +20,23 @@
 .post {
   padding-left: 40px;
   font-size: 20px;
+  line-height: 80px;
 }
 
-.menu-icon {
-  display: none;
+/* font-awesomeのアイコンのcss */
+.fa-comment-alt {
+  font-size: 30px;
+  padding-left: 40px;
+  line-height: 80px;
 }
 
+.fa-user {
+  font-size: 30px;
+  padding-left: 40px;
+  line-height: 80px;
+}
+
+/* ここからがメインの記述 */
 .contents {
   width: 100%;
   margin-left: auto;
@@ -79,6 +91,11 @@ form input[type="submit"]:hover {
   background-color: rgb(255, 192, 203);
 }
 
+.form input[type="file"] {
+  width: 100%;
+}
+
+/* ここからがフッターの記述 */
 footer {
   margin: 30px auto;
   padding-top: 30px;
@@ -87,6 +104,54 @@ footer {
 
 footer p {
   text-align: center;
+}
+
+/* ここから下が投稿フォームのcssの記述 */
+
+.image_btn {
+  display: none;
+}
+
+.image_input_btn {
+  display: block;
+  color: black;
+  background-color: #f5f5f5;
+  margin: 5px 0 15px;
+  padding: 10px;
+  border: 1px solid #D8D8D8;
+  border-radius: 5px;
+  text-align: center;
+}
+
+form textarea {
+  width: 100%;
+  height: 100px;
+  margin: 5px 0 15px;
+  padding: 10px;
+  border: 1px solid #D8D8D8;
+  border-radius: 5px;
+}
+
+.prefecuture-select {
+  display: block;
+  width: 100%;
+  margin: 5px 0 15px;
+  padding: 10px;
+  border: 1px solid #D8D8D8;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+
+.input-need {
+  font-size: 15px;
+  color: red;
+  margin-left: 5px;
+}
+
+.input-text {
+  font-size: 15px;
+  margin-left: 5px;
 }
 
 @media (max-width: 1024px) {
