--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <h2>Sign up</h2>
       <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
 
-        <%= render partial: 'devise/shared/error_messages', model: @user %>
+        <%= render partial: 'shared/error_messages', model: @user %>
         
         <div class="field">
           <%= f.label :name %><br />
