--- a/app/views/shared/_second_header.html.erb
+++ b/app/views/shared/_second_header.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="header-logo"><%= link_to "Hanataba", "#" %></div>
+  <div class="header-logo"><%= link_to "Hanataba", root_path %></div>
     <div class="header-list">
       <ul class="list">
         <li><%= link_to "Hanatabaについて", "#", class: "post" %></li>
