--- a/app/assets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/user/login.css
@@ -1,5 +1,5 @@
 /* ここからヘッダーの記述 */
-.header {
+.second_header {
   width: 100%;
   height: 80px;
   background-color: rgba(255, 192, 203, 0.5);
@@ -9,15 +9,15 @@
   align-items: center;
 }
 
-.header-logo {
+.second_header-logo {
   font-size: 40px;
 }
 
-.list {
+.second_list {
   display: flex;
 }
 
-.post {
+.second_post {
   padding-left: 40px;
   font-size: 20px;
 }
@@ -97,7 +97,7 @@ footer p {
 }
 
 @media (max-width: 1024px) {
-  .header {
+  .second_header {
     width: 100%;
     height: 80px;
     background-color: rgba(255, 192, 203, 0.5);
@@ -107,18 +107,18 @@ footer p {
     align-items: center;
   }
   
-  .header-logo {
+  .second_header-logo {
     font-size: 40px;
   }
 
-  .post {
+  .second_post {
     padding-left: 15px;
     font-size: 20px;
   }
 }
 
 @media (max-width: 599px) {
-  .header {
+  .second_header {
     width: 100%;
     height: 80px;
     background-color: rgba(255, 192, 203, 0.5);
@@ -128,11 +128,11 @@ footer p {
     align-items: center;
   }
   
-  .header-logo {
+  .second_header-logo {
     font-size: 40px;
   }
   
-  .header-list {
+  .second_header-list {
     display: none;
   }
 
