--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <div class="header-list">
     <ul class="list">
       <li><%= link_to "投稿する", new_tweet_path, class: "post" %></li>
-      <li><%= link_to "投稿予定リスト", "#", class: "post" %></li>
+      <li><%= link_to "お店に行くリスト", "#", class: "post" %></li>
       <li><%= link_to "お気に入り", "#", class: "post" %></li>
       <li><i class="far fa-comment-alt"></i></li>
       <li><i class="fas fa-user"></i></li>
