--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -48,9 +48,9 @@
               <% end %>
               <div class="tweet_link_btn">
                 <div class="link_btn">
-                  <span><%=link_to "削除", "#"%></span>
+                  <span><%=link_to "詳細", tweet_path(tweet.id), method: :get %></span>
                   <span><%=link_to "編集", "#"%></span>
-                  <span><%=link_to "詳細", "#"%></span>
+                  <span><%=link_to "削除", "#"%></span>
                 </div>
                 <div class="tweet_link"><%=link_to "by  #{tweet.user.name}", "#" %></div>
               </div>
@@ -63,28 +63,3 @@
 <main>
 
 <%= render partial: "shared/second_footer" %>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<%# <h1>トップページ</h1>
-<% if user_signed_in?%>
-  <%# <%= "#{current_user.name}さんは、ログインしています"%>
-  <%# <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-<%# <% else %>
-  <%# <%= link_to "新規登録", new_user_registration_path %>
-  <%# <%= link_to "ログイン", new_user_session_path %>
-<%# <% end %> 
