--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -38,10 +38,10 @@
               <div class="log_title">ログを追加する</div>
               <%= form_with model: @tweet, local: true do |f| %>
                 <div class="field_flex">
-                  <div class="field">
+                  <div class="log_field">
                     <%= f.text_field :hoge, class:"tweet_form" %>
                   </div>
-                  <div class="actions">
+                  <div class="log_actions">
                     <%= f.submit "追加" %>
                   </div>
                 </div>
@@ -49,7 +49,7 @@
               <div class="tweet_link_btn">
                 <div class="link_btn">
                   <span><%=link_to "詳細", tweet_path(tweet.id), method: :get %></span>
-                  <span><%=link_to "編集", "#"%></span>
+                  <span><%=link_to "編集", edit_tweet_path(tweet.id) %></span>
                   <span><%=link_to "削除", "#"%></span>
                 </div>
                 <div class="tweet_link"><%=link_to "by  #{tweet.user.name}", "#" %></div>
