--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -48,9 +48,9 @@
               <% end %>
               <div class="tweet_link_btn">
                 <div class="link_btn">
-                  <span><%=link_to "詳細", tweet_path(tweet.id), method: :get %></span>
+                  <span><%=link_to "詳細", tweet_path(tweet.id) %></span>
                   <span><%=link_to "編集", edit_tweet_path(tweet.id) %></span>
-                  <span><%=link_to "削除", "#"%></span>
+                  <span><%=link_to "削除", tweet_path(tweet.id), method: :delete %></span>
                 </div>
                 <div class="tweet_link"><%=link_to "by  #{tweet.user.name}", "#" %></div>
               </div>
