--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
               <span><%=link_to "フォロワー", "#" %></span>
             </div>
             <div class="profile_edit">
-              <span><%=link_to "プロフィール編集", "#" %></span>
+              <span><%=link_to "プロフィール編集", edit_user_registration_path %></span>
             </div>
           </div>
         </div>
