フォームの追加

--- a/app/assets/stylesheets/user/index.css
+++ b/app/assets/stylesheets/user/index.css
@@ -129,6 +129,22 @@
   border-bottom: 1px solid  rgba(128,128,128, 0.5);
 }
 
+/* 検索ボタンのcssの記述 */
+.search_flex {
+  display: flex;
+  margin: 30px 30px 10px;
+}
+
+.search_field {
+  width: 80%;
+  padding-right: 20px;
+}
+
+.search_actions {
+  width: 20%;
+  padding-right: 20px;
+}
+
 @media (max-width: 1024px) {
   .favorite_btn {
     font-size: 15px;
