--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,6 +2,16 @@
 
 <main>
   <div class="main_contents">
+    <%= form_with(url: "#", local: true, method: :get, class: "search-form") do |form| %>
+      <div class="search_flex">
+        <div class="search_field">
+          <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+        </div>
+        <div class="search_actions">
+          <%= form.submit "検索", class: "search-btn" %>
+        </div>
+      </div>
+    <% end %>
     <div class="main_container">
       <h1>投稿一覧</h1>
       <div class="contents_row">
