--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,7 @@
 
 <main>
   <div class="main_contents">
-    <%= form_with(url: "#", local: true, method: :get, class: "search-form") do |form| %>
+    <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
       <div class="search_flex">
         <div class="search_field">
           <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
