機能テストコード作成

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,3 +10,5 @@
       </ul>
   </div>
 </div>
+<%# これは後でjavascriptで実装 %>
+<li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
