--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,9 @@
               <span><%=link_to "フォロワー", "#" %></span>
             </div>
             <div class="profile_edit">
-              <span><%=link_to "プロフィール編集", edit_user_registration_path %></span>
+              <% if user_signed_in? && current_user.id == @user.id %>
+                <span><%=link_to "プロフィール編集", edit_user_registration_path %></span>
+              <% end %>
             </div>
           </div>
         </div>
