追加実装箇所を明記

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -23,9 +23,9 @@
                   <%= image_tag tweet.image.variant(resize: '200x200'), class: 'tweet-image'%>
                 </div>
                 <div class="flex_right">
-                  <%# jsを適応する%>
+                  <%# 追加実装%>
                   <div class="favorite_btn">お気に入りに追加する</div>
-                  <%# jsを適応する%>
+                  <%# 追加実装%>
                   <div class="shop_btn">お店に行くリストに追加する</div>
                   <div class="created_at"><%="投稿日時: #{l tweet.created_at, format: :short}"%></div>
                 </div>
