--- a/app/assets/stylesheets/_second_header.css
+++ b/app/assets/stylesheets/_second_header.css
@@ -115,7 +115,7 @@ nav {
     opacity: 0;
     visibility: hidden;
     transition: opacity .5s, visibility .5s;
-    background-color: rgba(128,128,128);
+    background-color: rgb(128,128,128);
     color: white;
   }
 
