--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -24,24 +24,30 @@
 }
 
 /* 以下プルダウンメニューの実装 */
+/* メニューアイコン */
 .lists {
   position: relative;
 }
-
+/* メニュー */
 .show-lists {
   position: absolute;
+  width: 140px;
   top: 70px;
+  z-index: 1002;
   color: white;
   background-color: rgb(128,128,128);
-  box-shadow: 0 0 10px rgba(41,41,41,0.2);
+  box-shadow: 0px 14px 33px -9px rgba(0,0,0,0.75);
   border-radius: 5px;
   padding:20px 20px 10px;
+  /* トランジションを変更する */
+  transition: 0s;
+  /* visibility: hidden; */
 }
-
+/* メニューの下幅 */
 .show-lists li {
   padding-bottom: 15px;
 }
-
+/* 通常時にメニューは非表示 */
 .hidden{
   display: none;
 }
