--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
           <li><%= link_to "プロフィール", "#" %></li>
           <li><%= link_to "ユーザー一覧", "#" %></li>
           <li><%= link_to "Hanatabaとは？", "#" %></li>
-          <li><%= link_to "ログアウト", destroy_user_session_path %></li>
+          <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
         </ul>
       </li>
     </ul>
